various small updates

--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -24,11 +24,20 @@ You will use your skills to (1) build a predictive model and (2) conceptualise a
 At the end of the course, you will have a better understanding of healthcare and careers in this industry, more hands-on experience with real-world problem statements, and a GitHub project to add to your portfolio.
 You will also get opportunities to network with healthcare leaders in Singapore through the guest lectures.
 
+Hackathon labs
+==============
+
+We will use the following datasets for the hackathon labs.
+
+[Thousand Voices of Trauma](https://huggingface.co/datasets/yenopoya/thousand-voices-trauma)
+
+[Mental Health Datasets](https://onnokampman.com/files/Mental%20Health%20Datasets.html)
+
 Recommended reading
 ===================
 
-1. [The AI Revolution in Medicine](https://www.amazon.sg/AI-Revolution-Medicine-GPT-4-Beyond/dp/0138200130). Peter Lee, Carey Goldberg, and Isaac Kohane (2024).
 1. [Healthcare Transformation Using Artificial Intelligence](https://www.amazon.sg/Healthcare-Transformation-Using-Artificial-Intelligence/dp/0443289697). Robert JT Morris (2025).
+1. [The AI Revolution in Medicine](https://www.amazon.sg/AI-Revolution-Medicine-GPT-4-Beyond/dp/0138200130). Peter Lee, Carey Goldberg, and Isaac Kohane (2024).
 1. [Robust Behavioural Science](https://amyorben.com/uploads/syllabus.pdf). Amy Orben (2021).
 1. [Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025).
-1. [Mental Health Datasets](https://onnokampman.com/files/Mental%20Health%20Datasets%20Bibliography.html).
+1. [Co-Intelligence](https://www.goodreads.com/book/show/198678736-co-intelligence). Ethan Mollick (2024).
