add more references

--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -1,8 +1,8 @@
 ---
-title: "DSA4262 Sense-making Case Analysis"
+title: "DSA4262 Sense-making Case Analysis: Health and Medicine (2026)"
 collection: teaching
 type: "Undergraduate Year 4 Course"
-venue: "National University of Singapore, Department of Data Science and Statistics"
+venue: "National University of Singapore, Department of Statistics and Data Science"
 date: 2026-01-12
 location: "Singapore"
 ---
@@ -36,8 +36,16 @@ We will use the following datasets for the hackathon labs.
 Recommended reading
 ===================
 
+1. [Being Mortal: Medicine and What Matters in the End](https://www.goodreads.com/book/show/20696006-being-mortal?from_search=true&from_srp=true&qid=H5O7IdM8zI&rank=1). Atul Gawande.
+1. [Co-Intelligence](https://www.goodreads.com/book/show/198678736-co-intelligence). Ethan Mollick (2024).
+1. [Essential Psychology: A Concise Introduction](https://www.goodreads.com/book/show/8309374-essential-psychology?from_search=true&from_srp=true&qid=W6J3qUz5Or&rank=1).
 1. [Healthcare Transformation Using Artificial Intelligence](https://www.amazon.sg/Healthcare-Transformation-Using-Artificial-Intelligence/dp/0443289697). Robert JT Morris (2025).
-1. [The AI Revolution in Medicine](https://www.amazon.sg/AI-Revolution-Medicine-GPT-4-Beyond/dp/0138200130). Peter Lee, Carey Goldberg, and Isaac Kohane (2024).
+1. [Losing Our Minds](https://www.goodreads.com/book/show/57693494-losing-our-minds?from_search=true&from_srp=true&qid=YqTkVgVq3a&rank=2). Lucy Foulkes.
+1. [Myth or Magic: The Singapore Healthcare System](https://www.goodreads.com/book/show/18401211-myth-or-magic---the-singapore-healthcare-system). Jeremy Lim.
 1. [Robust Behavioural Science](https://amyorben.com/uploads/syllabus.pdf). Amy Orben (2021).
 1. [Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025).
-1. [Co-Intelligence](https://www.goodreads.com/book/show/198678736-co-intelligence). Ethan Mollick (2024).
+1. [The AI Revolution in Medicine: GPT-4 and Beyond](https://www.amazon.sg/AI-Revolution-Medicine-GPT-4-Beyond/dp/0138200130). Peter Lee, Carey Goldberg, and Isaac Kohane (2024).
+1. [The Gift of Therapy](https://www.goodreads.com/book/show/21025.The_Gift_of_Therapy?ref=nav_sb_ss_1_15). Yalom Irvin.
+1. [The Man Who Mistook his Wife for a Hat](https://www.goodreads.com/book/show/63697.The_Man_Who_Mistook_His_Wife_for_a_Hat_and_Other_Clinical_Tales?ref=nav_sb_ss_1_15). Oliver Sacks.
+1. [Why Zebras Don’t Get Ulcers](https://www.goodreads.com/book/show/327.Why_Zebras_Don_t_Get_Ulcers?ref=nav_sb_ss_1_15). Robert Sapolsky.
+1. [Working Backwards](https://www.goodreads.com/book/show/53138083-working-backwards?from_search=true&from_srp=true&qid=jXRiVjWWfg&rank=1). Colin Bryar.
