--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -7,10 +7,9 @@ date: 2026-01-12
 location: "Singapore"
 ---
 
-I will teach DSA4262 Sense-making Case Analysis: Health & Medicine in 2026.
+I am teaching DSA4262 Sense-making Case Analysis: Health & Medicine in 2026 (AY2025/26 Semester 2).
 
-Course synopsis
-===============
+## Course synopsis
 
 This course will give you the opportunity to apply your data science skills to real-world problems in healthcare.
 Through a series of technical workshops and (guest) lectures, we will cover the foundational knowledge required for this course.
@@ -24,28 +23,71 @@ You will use your skills to (1) build a predictive model and (2) conceptualise a
 At the end of the course, you will have a better understanding of healthcare and careers in this industry, more hands-on experience with real-world problem statements, and a GitHub project to add to your portfolio.
 You will also get opportunities to network with healthcare leaders in Singapore through the guest lectures.
 
-Hackathon labs
-==============
+## Course content
 
-We will use the following datasets for the hackathon labs.
+### Data visualisation workshop
+
+We will use the following dataset for the data visualisation workshop:
 
 [Thousand Voices of Trauma](https://huggingface.co/datasets/yenopoya/thousand-voices-trauma)
 
+### Hackathon lab
+
+We will use the following dataset for the predictive modelling hackathon lab:
+
+[PsyDefDetect](https://psydefdetect-shared-task.github.io)
+
+### Suggested datasets
+
 [Mental Health Datasets](https://onnokampman.com/files/Mental%20Health%20Datasets.html)
 
-Recommended reading
-===================
+## Deep dives
 
-1. [Being Mortal: Medicine and What Matters in the End](https://www.goodreads.com/book/show/20696006-being-mortal?from_search=true&from_srp=true&qid=H5O7IdM8zI&rank=1). Atul Gawande.
+This course covers a wide range of topics, which would be impossible to cover in a semester.
+Here are some further materials if you would like to dive a bit deeper on some of the topics, whether it's technical skills, domain insights, or philosophical intuition.
+
+### Journal articles
+
+1. [Singapore's health-care system: key features, challenges, and shifts](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(21)00252-X/abstract)
+
+### Books (data, AI)
+
+1. [AIQ](https://www.goodreads.com/book/show/39328092-aiq). Nick Polson and James Scott (2018).
 1. [Co-Intelligence](https://www.goodreads.com/book/show/198678736-co-intelligence). Ethan Mollick (2024).
-1. [Essential Psychology: A Concise Introduction](https://www.goodreads.com/book/show/8309374-essential-psychology?from_search=true&from_srp=true&qid=W6J3qUz5Or&rank=1).
-1. [Healthcare Transformation Using Artificial Intelligence](https://www.amazon.sg/Healthcare-Transformation-Using-Artificial-Intelligence/dp/0443289697). Robert JT Morris (2025).
-1. [Losing Our Minds](https://www.goodreads.com/book/show/57693494-losing-our-minds?from_search=true&from_srp=true&qid=YqTkVgVq3a&rank=2). Lucy Foulkes.
-1. [Myth or Magic: The Singapore Healthcare System](https://www.goodreads.com/book/show/18401211-myth-or-magic---the-singapore-healthcare-system). Jeremy Lim.
-1. [Robust Behavioural Science](https://amyorben.com/uploads/syllabus.pdf). Amy Orben (2021).
+1. [Healthcare Transformation Using Artificial Intelligence](https://www.goodreads.com/book/show/227890015-healthcare-transformation-using-artificial-intelligence). Robert JT Morris (2025).
 1. [Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025).
-1. [The AI Revolution in Medicine: GPT-4 and Beyond](https://www.amazon.sg/AI-Revolution-Medicine-GPT-4-Beyond/dp/0138200130). Peter Lee, Carey Goldberg, and Isaac Kohane (2024).
-1. [The Gift of Therapy](https://www.goodreads.com/book/show/21025.The_Gift_of_Therapy?ref=nav_sb_ss_1_15). Yalom Irvin.
-1. [The Man Who Mistook his Wife for a Hat](https://www.goodreads.com/book/show/63697.The_Man_Who_Mistook_His_Wife_for_a_Hat_and_Other_Clinical_Tales?ref=nav_sb_ss_1_15). Oliver Sacks.
-1. [Why Zebras Don’t Get Ulcers](https://www.goodreads.com/book/show/327.Why_Zebras_Don_t_Get_Ulcers?ref=nav_sb_ss_1_15). Robert Sapolsky.
-1. [Working Backwards](https://www.goodreads.com/book/show/53138083-working-backwards?from_search=true&from_srp=true&qid=jXRiVjWWfg&rank=1). Colin Bryar.
+1. [The AI Revolution in Medicine: GPT-4 and Beyond](https://www.goodreads.com/book/show/123239515-the-ai-revolution-in-medicine). Peter Lee, Carey Goldberg, and Isaac Kohane (2023).
+
+### Books (healthcare, psychology, philosophy)
+
+1. [Being Mortal: Medicine and What Matters in the End](https://www.goodreads.com/book/show/20696006-being-mortal). Atul Gawande.
+1. [Essential Psychology: A Concise Introduction](https://www.goodreads.com/book/show/8309374-essential-psychology).
+1. [Hello World: Being Human in the Age of Algorithms](https://www.goodreads.com/book/show/43726517-hello-world). Hannah Fry (2018).
+1. [Losing Our Minds](https://www.goodreads.com/book/show/57693494-losing-our-minds). Lucy Foulkes (2024).
+1. [Myth or Magic: The Singapore Healthcare System](https://www.goodreads.com/book/show/18401211-myth-or-magic---the-singapore-healthcare-system). Jeremy Lim (2013).
+1. [Robust Behavioural Science](https://amyorben.com/uploads/syllabus.pdf). Amy Orben (2021).
+1. [The Gift of Therapy](https://www.goodreads.com/book/show/21025.The_Gift_of_Therapy). Yalom Irvin.
+1. [The Laws of Medicine](https://www.goodreads.com/book/show/25409816-the-laws-of-medicine). Siddhartha Mukherjee (2015).
+1. [The Man Who Mistook his Wife for a Hat](https://www.goodreads.com/book/show/63697.The_Man_Who_Mistook_His_Wife_for_a_Hat_and_Other_Clinical_Tales). Oliver Sacks.
+1. [Why Zebras Don’t Get Ulcers](https://www.goodreads.com/book/show/327.Why_Zebras_Don_t_Get_Ulcers). Robert Sapolsky.
+
+### Books (product, business, design)
+
+1. [The Design of Everyday Things](https://www.goodreads.com/book/show/17290807-the-design-of-everyday-things). Donald Norman (1988).
+1. [The Innovator's Prescription](https://www.goodreads.com/book/show/3487850-the-innovator-s-prescription). Clayton M. Christensen, Jerome H. Grossman, and Jason Hwang (2008).
+1. [Working Backwards](https://www.goodreads.com/book/show/53138083-working-backwards). Colin Bryar.
+
+### Podcasts
+
+1. [All in the Mind](https://www.abc.net.au/listen/programs/allinthemind)
+1. [Health Check by The Straits Times](https://www.straitstimes.com/tags/health-check-podcast)
+1. [One North Stories](https://one-north-stories.captivate.fm)
+
+### Videos
+
+1. [Human Behavioral Biology - Stanford Lecture Series](https://www.youtube.com/playlist?list=PL848F2368C90DDC3D). Robert Sapolsky (2012).
+
+### Other
+
+1. [The Hemingway Report Newsletter](https://www.thehemingwayreport.com)
+1. [State of Clinical AI Report 2026](https://www.arise-ai.org/report)
