reorganize resources for course

--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -29,6 +29,11 @@ You will also get opportunities to network with healthcare leaders in Singapore 
 
 We will use the following dataset for the data visualisation workshop:
 
+You are free to choose your own datasets.
+This is a curated list of some datasets, just for your reference or inspiration:
+
+[Mental Health Datasets](https://onnokampman.com/files/Mental%20Health%20Datasets.html)
+
 [Thousand Voices of Trauma](https://huggingface.co/datasets/yenopoya/thousand-voices-trauma)
 
 ### Hackathon lab
@@ -37,9 +42,14 @@ We will use the following dataset for the predictive modelling hackathon lab:
 
 [PsyDefDetect](https://psydefdetect-shared-task.github.io)
 
-### Suggested datasets
+## Essential readings
 
-[Mental Health Datasets](https://onnokampman.com/files/Mental%20Health%20Datasets.html)
+These are some strongly recommended readings to build your foundations for this course.
+
+1. [Large language models could change the future of behavioral healthcare: a proposal for responsible development and evaluation](https://www.nature.com/articles/s44184-024-00056-z). Elizabeth Stade et al. (2024).
+1. [Mental Health (Our World in Data)](https://ourworldindata.org/mental-health).
+1. [Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025).
+1. [Singapore's health-care system: key features, challenges, and shifts](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(21)00252-X/abstract).
 
 ## Deep dives
 
@@ -48,14 +58,16 @@ Here are some further materials if you would like to dive a bit deeper on some o
 
 ### Journal articles
 
-1. [Singapore's health-care system: key features, challenges, and shifts](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(21)00252-X/abstract)
+1. [Illusory generalizability of clinical prediction models](https://www.science.org/doi/10.1126/science.adg8538).
+1. [Perspectives on Machine Learning from Psychology's Reproducibility Crisis](https://arxiv.org/abs/2104.08878).
+1. [The Science of Visual Data Communication: What Works](https://journals.sagepub.com/doi/10.1177/15291006211051956).
 
 ### Books (data, AI)
 
 1. [AIQ](https://www.goodreads.com/book/show/39328092-aiq). Nick Polson and James Scott (2018).
 1. [Co-Intelligence](https://www.goodreads.com/book/show/198678736-co-intelligence). Ethan Mollick (2024).
 1. [Healthcare Transformation Using Artificial Intelligence](https://www.goodreads.com/book/show/227890015-healthcare-transformation-using-artificial-intelligence). Robert JT Morris (2025).
-1. [Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025).
+1. [Speech and Language Processing](https://web.stanford.edu/~jurafsky/slp3/). Dan Jurafsky and James H. Martin (2026).
 1. [The AI Revolution in Medicine: GPT-4 and Beyond](https://www.goodreads.com/book/show/123239515-the-ai-revolution-in-medicine). Peter Lee, Carey Goldberg, and Isaac Kohane (2023).
 
 ### Books (healthcare, psychology, philosophy)
@@ -80,6 +92,7 @@ Here are some further materials if you would like to dive a bit deeper on some o
 ### Podcasts
 
 1. [All in the Mind](https://www.abc.net.au/listen/programs/allinthemind)
+1. [Hard Drugs](https://harddrugs.worksinprogress.co)
 1. [Health Check by The Straits Times](https://www.straitstimes.com/tags/health-check-podcast)
 1. [One North Stories](https://one-north-stories.captivate.fm)
 
@@ -89,5 +102,7 @@ Here are some further materials if you would like to dive a bit deeper on some o
 
 ### Other
 
+1. [Cargo Cult Science](https://fermatslibrary.com/s/cargo-cult-science#email-newsletter)
+1. [Construct Validity In Psychology Research](https://www.simplypsychology.org/construct-validity-definition-examples.html)
 1. [The Hemingway Report Newsletter](https://www.thehemingwayreport.com)
 1. [State of Clinical AI Report 2026](https://www.arise-ai.org/report)
