--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -27,9 +27,7 @@ You will also get opportunities to network with healthcare leaders in Singapore 
 
 ### Data visualisation workshop
 
-We will use the following dataset for the data visualisation workshop:
-
-You are free to choose your own datasets.
+You are free to choose your own datasets for data visualisation assignment.
 This is a curated list of some datasets, just for your reference or inspiration:
 
 [Mental Health Datasets](https://onnokampman.com/files/Mental%20Health%20Datasets.html)
