update essential readings

--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -27,7 +27,7 @@ You will also get opportunities to network with healthcare leaders in Singapore 
 
 ### Data visualisation workshop
 
-You are free to choose your own datasets for data visualisation assignment.
+You are free to choose your own datasets for the data visualisation assignment.
 This is a curated list of some datasets, just for your reference or inspiration:
 
 [Mental Health Datasets](https://onnokampman.com/files/Mental%20Health%20Datasets.html)
@@ -44,10 +44,12 @@ We will use the following dataset for the predictive modelling hackathon lab:
 
 These are some strongly recommended readings to build your foundations for this course.
 
-1. [Large language models could change the future of behavioral healthcare: a proposal for responsible development and evaluation](https://www.nature.com/articles/s44184-024-00056-z). Elizabeth Stade et al. (2024).
-1. [Mental Health (Our World in Data)](https://ourworldindata.org/mental-health).
-1. [Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025).
-1. [Singapore's health-care system: key features, challenges, and shifts](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(21)00252-X/abstract).
+1. 📄[A Paradigm Shift in Progress: Generative AI’s Evolving Role in Mental Health Care](https://mental.jmir.org/2025/1/e82369).
+1. 📖[Healthcare Transformation Using Artificial Intelligence](https://www.goodreads.com/book/show/227890015-healthcare-transformation-using-artificial-intelligence). Robert JT Morris (2025).
+1. 📄[Large language models could change the future of behavioral healthcare: a proposal for responsible development and evaluation](https://www.nature.com/articles/s44184-024-00056-z). Elizabeth Stade et al. (2024).
+1. 🌐[Mental Health (Our World in Data)](https://ourworldindata.org/mental-health).
+1. 🌐[Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025).
+1. 📄[Singapore's health-care system: key features, challenges, and shifts](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(21)00252-X/abstract).
 
 ## Deep dives
 
