update deep dives structure

--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -40,69 +40,80 @@ We will use the following dataset for the predictive modelling hackathon lab:
 
 [PsyDefDetect](https://psydefdetect-shared-task.github.io)
 
+Interested students may also join the CLPsych Shared Task challenge (deadline is 18 April 2026), one of the SemEval tasks, or Clinical Natural Language Processing Workshop task:
+
+[CLPsych Shared task](https://clpsych.org/shared-task/)
+
+[SemEval](https://semeval.github.io/SemEval2026/tasks.html)
+
+[Clinical Natural Language Processing Workshop Task](https://clinical-nlp.github.io/2026/)
+
 ## Essential readings
 
 These are some strongly recommended readings to build your foundations for this course.
 
-1. 📄[A Paradigm Shift in Progress: Generative AI’s Evolving Role in Mental Health Care](https://mental.jmir.org/2025/1/e82369).
-1. 📖[Healthcare Transformation Using Artificial Intelligence](https://www.goodreads.com/book/show/227890015-healthcare-transformation-using-artificial-intelligence). Robert JT Morris (2025).
-1. 📄[Large language models could change the future of behavioral healthcare: a proposal for responsible development and evaluation](https://www.nature.com/articles/s44184-024-00056-z). Elizabeth Stade et al. (2024).
-1. 🌐[Mental Health (Our World in Data)](https://ourworldindata.org/mental-health).
-1. 🌐[Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025).
-1. 📄[Singapore's health-care system: key features, challenges, and shifts](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(21)00252-X/abstract).
+1. 📄 [A Paradigm Shift in Progress: Generative AI’s Evolving Role in Mental Health Care](https://mental.jmir.org/2025/1/e82369).
+1. 📖 [Healthcare Transformation Using Artificial Intelligence](https://www.goodreads.com/book/show/227890015-healthcare-transformation-using-artificial-intelligence). Robert JT Morris (2025).
+1. 📄 [Large language models could change the future of behavioral healthcare: a proposal for responsible development and evaluation](https://www.nature.com/articles/s44184-024-00056-z). Elizabeth Stade et al. (2024).
+1. 🌐 [Mental Health (Our World in Data)](https://ourworldindata.org/mental-health).
+1. 🌐 [Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025).
+1. 📄 [Singapore's health-care system: key features, challenges, and shifts](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(21)00252-X/abstract).
+1. 📄 [Tracking the mental health of a nation: Prevalence and correlates of mental disorders in the second Singapore mental health study](https://www.cambridge.org/core/product/identifier/S2045796019000179/type/journal_article). Subramaniam et al. (2020).
 
 ## Deep dives
 
 This course covers a wide range of topics, which would be impossible to cover in a semester.
 Here are some further materials if you would like to dive a bit deeper on some of the topics, whether it's technical skills, domain insights, or philosophical intuition.
 
-### Journal articles
+### Foundations (mental healthcare and Singapore)
 
-1. [Illusory generalizability of clinical prediction models](https://www.science.org/doi/10.1126/science.adg8538).
-1. [Perspectives on Machine Learning from Psychology's Reproducibility Crisis](https://arxiv.org/abs/2104.08878).
-1. [The Science of Visual Data Communication: What Works](https://journals.sagepub.com/doi/10.1177/15291006211051956).
+For building domain empathy and local situational awareness.
 
-### Books (data, AI)
+1. 🎙️ [All in the Mind](https://www.abc.net.au/listen/programs/allinthemind)
+1. 📖 [Being Mortal: Medicine and What Matters in the End](https://www.goodreads.com/book/show/20696006-being-mortal). Atul Gawande. Discusses the "human" side of clinical outcomes.
+1. 📖 [Essential Psychology: A Concise Introduction](https://www.goodreads.com/book/show/8309374-essential-psychology).
+1. 🎙️ [Hard Drugs](https://harddrugs.worksinprogress.co)
+1. 🎙️ [Health Check by The Straits Times](https://www.straitstimes.com/tags/health-check-podcast)
+1. 📖 [Hello World: Being Human in the Age of Algorithms](https://www.goodreads.com/book/show/43726517-hello-world). Hannah Fry (2018).
+1. 📺 [Human Behavioral Biology - Stanford Lecture Series](https://www.youtube.com/playlist?list=PL848F2368C90DDC3D). Robert Sapolsky (2012).
+1. 📖 [Losing Our Minds](https://www.goodreads.com/book/show/57693494-losing-our-minds). Lucy Foulkes (2024).
+1. 📖 [Myth or Magic: The Singapore Healthcare System](https://www.goodreads.com/book/show/18401211-myth-or-magic---the-singapore-healthcare-system). Jeremy Lim (2013).
+1. 📖 [The Gift of Therapy](https://www.goodreads.com/book/show/21025.The_Gift_of_Therapy). Yalom Irvin.
+1. 📧 [The Hemingway Report Newsletter](https://www.thehemingwayreport.com)
+1. 📖 [The Laws of Medicine](https://www.goodreads.com/book/show/25409816-the-laws-of-medicine). Siddhartha Mukherjee (2015).
+1. 📖 [The Man Who Mistook his Wife for a Hat](https://www.goodreads.com/book/show/63697.The_Man_Who_Mistook_His_Wife_for_a_Hat_and_Other_Clinical_Tales). Oliver Sacks.
+1. 📖 [Why Zebras Don’t Get Ulcers](https://www.goodreads.com/book/show/327.Why_Zebras_Don_t_Get_Ulcers). Robert Sapolsky.
 
-1. [AIQ](https://www.goodreads.com/book/show/39328092-aiq). Nick Polson and James Scott (2018).
-1. [Co-Intelligence](https://www.goodreads.com/book/show/198678736-co-intelligence). Ethan Mollick (2024).
-1. [Healthcare Transformation Using Artificial Intelligence](https://www.goodreads.com/book/show/227890015-healthcare-transformation-using-artificial-intelligence). Robert JT Morris (2025).
-1. [Speech and Language Processing](https://web.stanford.edu/~jurafsky/slp3/). Dan Jurafsky and James H. Martin (2026).
-1. [The AI Revolution in Medicine: GPT-4 and Beyond](https://www.goodreads.com/book/show/123239515-the-ai-revolution-in-medicine). Peter Lee, Carey Goldberg, and Isaac Kohane (2023).
+### Toolkit (data science and visual communication)
 
-### Books (healthcare, psychology, philosophy)
+For mastering the engineering of perception and technical methodology.
 
-1. [Being Mortal: Medicine and What Matters in the End](https://www.goodreads.com/book/show/20696006-being-mortal). Atul Gawande.
-1. [Essential Psychology: A Concise Introduction](https://www.goodreads.com/book/show/8309374-essential-psychology).
-1. [Hello World: Being Human in the Age of Algorithms](https://www.goodreads.com/book/show/43726517-hello-world). Hannah Fry (2018).
-1. [Losing Our Minds](https://www.goodreads.com/book/show/57693494-losing-our-minds). Lucy Foulkes (2024).
-1. [Myth or Magic: The Singapore Healthcare System](https://www.goodreads.com/book/show/18401211-myth-or-magic---the-singapore-healthcare-system). Jeremy Lim (2013).
-1. [Robust Behavioural Science](https://amyorben.com/uploads/syllabus.pdf). Amy Orben (2021).
-1. [The Gift of Therapy](https://www.goodreads.com/book/show/21025.The_Gift_of_Therapy). Yalom Irvin.
-1. [The Laws of Medicine](https://www.goodreads.com/book/show/25409816-the-laws-of-medicine). Siddhartha Mukherjee (2015).
-1. [The Man Who Mistook his Wife for a Hat](https://www.goodreads.com/book/show/63697.The_Man_Who_Mistook_His_Wife_for_a_Hat_and_Other_Clinical_Tales). Oliver Sacks.
-1. [Why Zebras Don’t Get Ulcers](https://www.goodreads.com/book/show/327.Why_Zebras_Don_t_Get_Ulcers). Robert Sapolsky.
+1. 📖 [Calling Bullshit: The Art of Skepticism in a Data-Driven World](https://www.callingbullshit.org/index.html). Carl Bergstrom and Jevin West.
+1. 📄 [Digital Phenotyping for Monitoring Mental Disorders: Systematic Review](https://www.jmir.org/2023/1/e46778).
+1. 📖 [Speech and Language Processing](https://web.stanford.edu/~jurafsky/slp3/). Dan Jurafsky and James H. Martin (2026).
+1. 📄 [The Psychological Meaning of Words: LIWC and Computerized Text Analysis Methods](https://journals.sagepub.com/doi/10.1177/0261927X09351676). Yla R. Tausczik and James W. Pennebaker (2009).
+1. 📄 [The Science of Visual Data Communication: What Works](https://journals.sagepub.com/doi/10.1177/15291006211051956).
 
-### Books (product, business, design)
+### Building the future (GenAI and product building)
 
-1. [The Design of Everyday Things](https://www.goodreads.com/book/show/17290807-the-design-of-everyday-things). Donald Norman (1988).
-1. [The Innovator's Prescription](https://www.goodreads.com/book/show/3487850-the-innovator-s-prescription). Clayton M. Christensen, Jerome H. Grossman, and Jason Hwang (2008).
-1. [Working Backwards](https://www.goodreads.com/book/show/53138083-working-backwards). Colin Bryar.
+For understanding the cutting edge and its implementation challenges.
 
-### Podcasts
+1. 📖 [AIQ](https://www.goodreads.com/book/show/39328092-aiq). Nick Polson and James Scott (2018).
+1. 📖 [Co-Intelligence](https://www.goodreads.com/book/show/198678736-co-intelligence). Ethan Mollick (2024).
+1. 📊 [Model AI governance framework for Generative AI](https://aiverifyfoundation.sg/wp-content/uploads/2024/05/Model-AI-Governance-Framework-for-Generative-AI-May-2024-1-1.pdf)
+1. 🎙️ [One North Stories](https://one-north-stories.captivate.fm)
+1. 📊 [State of Clinical AI Report 2026](https://www.arise-ai.org/report)
+1. 📖 [The AI Revolution in Medicine: GPT-4 and Beyond](https://www.goodreads.com/book/show/123239515-the-ai-revolution-in-medicine). Peter Lee, Carey Goldberg, and Isaac Kohane (2023).
+1. 📖 [The Design of Everyday Things](https://www.goodreads.com/book/show/17290807-the-design-of-everyday-things). Donald Norman (1988).
+1. 📖 [The Innovator's Prescription](https://www.goodreads.com/book/show/3487850-the-innovator-s-prescription). Clayton M. Christensen, Jerome H. Grossman, and Jason Hwang (2008).
+1. 📖 [Working Backwards](https://www.goodreads.com/book/show/53138083-working-backwards). Colin Bryar.
 
-1. [All in the Mind](https://www.abc.net.au/listen/programs/allinthemind)
-1. [Hard Drugs](https://harddrugs.worksinprogress.co)
-1. [Health Check by The Straits Times](https://www.straitstimes.com/tags/health-check-podcast)
-1. [One North Stories](https://one-north-stories.captivate.fm)
+### The critical lens (validity, ethics, philosophy, mental models)
 
-### Videos
+For avoiding the "Cargo Cult" trap and ensuring clinical utility.
 
-1. [Human Behavioral Biology - Stanford Lecture Series](https://www.youtube.com/playlist?list=PL848F2368C90DDC3D). Robert Sapolsky (2012).
-
-### Other
-
-1. [Cargo Cult Science](https://fermatslibrary.com/s/cargo-cult-science#email-newsletter)
-1. [Construct Validity In Psychology Research](https://www.simplypsychology.org/construct-validity-definition-examples.html)
-1. [The Hemingway Report Newsletter](https://www.thehemingwayreport.com)
-1. [State of Clinical AI Report 2026](https://www.arise-ai.org/report)
+1. 📄 [Cargo Cult Science](https://fermatslibrary.com/s/cargo-cult-science#email-newsletter).
+1. 📄 [Construct Validity In Psychology Research](https://www.simplypsychology.org/construct-validity-definition-examples.html).
+1. 📄 [Illusory generalizability of clinical prediction models](https://www.science.org/doi/10.1126/science.adg8538).
+1. 📄 [Perspectives on Machine Learning from Psychology's Reproducibility Crisis](https://arxiv.org/abs/2104.08878).
+1. 🌐 [Robust Behavioural Science](https://amyorben.com/uploads/syllabus.pdf). Amy Orben (2021).
