clean up example datasets

--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -30,9 +30,7 @@ You will also get opportunities to network with healthcare leaders in Singapore 
 You are free to choose your own datasets for the data visualisation assignment.
 This is a curated list of some datasets, just for your reference or inspiration:
 
-[Mental Health Datasets](https://onnokampman.com/files/Mental%20Health%20Datasets.html)
-
-[Thousand Voices of Trauma](https://huggingface.co/datasets/yenopoya/thousand-voices-trauma)
+- [Mental Health Datasets](https://onnokampman.com/files/Mental%20Health%20Datasets.html)
 
 ### Hackathon lab
 
