move from psydefdetect to dreaddit

--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -36,15 +36,15 @@ This is a curated list of some datasets, just for your reference or inspiration:
 
 We will use the following dataset for the predictive modelling hackathon lab:
 
-[PsyDefDetect](https://psydefdetect-shared-task.github.io)
+- [Dreaddit (ACL article)](https://aclanthology.org/D19-6213/)
+- [Dreaddit (download link)](http://www.cs.columbia.edu/~eturcan/data/dreaddit.zip)
 
-Interested students may also join the CLPsych Shared Task challenge (deadline is 18 April 2026), one of the SemEval tasks, or Clinical Natural Language Processing Workshop task:
+Interested students may also join one of the currently ongoing Shared Task challenges:
 
-[CLPsych Shared task](https://clpsych.org/shared-task/)
-
-[SemEval](https://semeval.github.io/SemEval2026/tasks.html)
-
-[Clinical Natural Language Processing Workshop Task](https://clinical-nlp.github.io/2026/)
+- [Clinical Natural Language Processing Workshop Task](https://clinical-nlp.github.io/2026/)
+- [CLPsych Shared task](https://clpsych.org/shared-task/)
+- [PsyDefDetect](https://psydefdetect-shared-task.github.io)
+- [SemEval](https://semeval.github.io/SemEval2026/tasks.html)
 
 ## Essential readings
 
