update essential readings

--- a/_teaching/2026-DSA4262.md
+++ b/_teaching/2026-DSA4262.md
@@ -50,13 +50,13 @@ Interested students may also join one of the currently ongoing Shared Task chall
 
 These are some strongly recommended readings to build your foundations for this course.
 
-1. 📄 [A Paradigm Shift in Progress: Generative AI’s Evolving Role in Mental Health Care](https://mental.jmir.org/2025/1/e82369).
-1. 📖 [Healthcare Transformation Using Artificial Intelligence](https://www.goodreads.com/book/show/227890015-healthcare-transformation-using-artificial-intelligence). Robert JT Morris (2025).
-1. 📄 [Large language models could change the future of behavioral healthcare: a proposal for responsible development and evaluation](https://www.nature.com/articles/s44184-024-00056-z). Elizabeth Stade et al. (2024).
-1. 🌐 [Mental Health (Our World in Data)](https://ourworldindata.org/mental-health).
-1. 🌐 [Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025).
-1. 📄 [Singapore's health-care system: key features, challenges, and shifts](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(21)00252-X/abstract).
-1. 📄 [Tracking the mental health of a nation: Prevalence and correlates of mental disorders in the second Singapore mental health study](https://www.cambridge.org/core/product/identifier/S2045796019000179/type/journal_article). Subramaniam et al. (2020).
+1. 📄 [A paradigm shift in progress: Generative AI’s evolving role in mental health care](https://mental.jmir.org/2025/1/e82369). John Torous and Andrea Cipriani (2025). - A recent perspective on the future of GenAI in mental health.
+1. 📖 [Healthcare Transformation Using Artificial Intelligence](https://www.goodreads.com/book/show/227890015-healthcare-transformation-using-artificial-intelligence). Robert JT Morris (2025). - A great resource on AI's transformative role in healthcare, with many case studies from Singapore.
+1. 📄 [Large language models could change the future of behavioral healthcare: A proposal for responsible development and evaluation](https://www.nature.com/articles/s44184-024-00056-z). Elizabeth Stade et al. (2024). - A nice overview and roadmap of responsible LLM deployments in behavioral healthcare.
+1. 🌐 [Mental Health (Our World in Data)](https://ourworldindata.org/mental-health). - Beautiful graphs and rich datasets to increase your understanding of global mental health.
+1. 🌐 [Saloni's Guide to Data Visualization](https://www.scientificdiscovery.dev/p/salonis-guide-to-data-visualization). Saloni Dattani (2025). - Good introduction to the importance of data visualization and some practical advice.
+1. 📄 [Singapore's health-care system: Key features, challenges, and shifts](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(21)00252-X/abstract). Chorh Chuan Tan et al. (2021) - Great introduction to Singapore's healthcare system and national priorities.
+1. 📄 [Tracking the mental health of a nation: Prevalence and correlates of mental disorders in the second Singapore mental health study](https://www.cambridge.org/core/product/identifier/S2045796019000179/type/journal_article). Subramaniam et al. (2020). - Good local overview of mental health prevalence rates.
 
 ## Deep dives
 
